Tst/Tests/Pos/AnyType/tuple.p
main machine Entry {
    var a:(any, any);

    start state init {
        entry {
            a = (4, false);
        }
    }
}
